@@ -1,18 +1,24 @@
 package com.opencode.alumxbackend.jobposts.service;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.UUID;
 
+import com.opencode.alumxbackend.jobposts.dto.*;
+import com.opencode.alumxbackend.jobposts.model.JobPostComment;
+import com.opencode.alumxbackend.jobposts.repository.CommentRepository;
+import com.opencode.alumxbackend.jobposts.model.JobPostLike;
+import com.opencode.alumxbackend.jobposts.repository.JobPostLikeRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.opencode.alumxbackend.common.exception.Errors.BadRequestException;
 import com.opencode.alumxbackend.common.exception.Errors.ForbiddenException;
 import com.opencode.alumxbackend.common.exception.Errors.ResourceNotFoundException;
-import com.opencode.alumxbackend.jobposts.dto.JobPostRequest;
-import com.opencode.alumxbackend.jobposts.dto.JobPostResponse;
 import com.opencode.alumxbackend.jobposts.model.JobPost;
 import com.opencode.alumxbackend.jobposts.repository.JobPostRepository;
 import com.opencode.alumxbackend.users.model.User;
@@ -20,15 +26,14 @@ import com.opencode.alumxbackend.users.repository.UserRepository;
 
 import lombok.RequiredArgsConstructor;
 
-
-
-// different from interface as here we are going to implement what we need
 @Service
 @RequiredArgsConstructor
-public class JobPostServiceImpl implements JobPostService{
+@Transactional
+public class JobPostServiceImpl implements JobPostService {
+    private final JobPostLikeRepository jobPostLikeRepository;
     private final JobPostRepository jobPostRepository;
     private final UserRepository userRepository;
-
+    private final CommentRepository commentRepository;
     @Override
     public List<JobPostResponse> getPostsByUser(Long userId) {
         User user = userRepository.findById(userId)
@@ -38,37 +43,72 @@ public class JobPostServiceImpl implements JobPostService{
         return JobPostResponse.fromEntities(posts);
     }
 
+    public CommentResponse addComment(Long postId, CommentRequest request) {
+        JobPost post = jobPostRepository.findById(postId)
+                .orElseThrow(()->new ResourceNotFoundException("job post not found"));
+
+        User user = userRepository.findById(request.userId())
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
+        JobPostComment comment = JobPostComment.builder()
+                .jobPost(post)
+                .user(user)
+                .content(request.content())
+                .build();
+
+       JobPostComment savedcomment = commentRepository.save(comment);
+
+
+        return new CommentResponse(
+                savedcomment.getId(),
+                savedcomment.getContent(),
+                user.getUsername(),
+                savedcomment.getCreatedAt()
+        );
+
+
+    }
+
+
+
+    @Override
+    public void likePost(Long postId, Long userId) {
+        JobPost post = jobPostRepository.findById(postId)
+                .orElseThrow(() -> new ResourceNotFoundException("Post not found with postId: " + postId));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + userId));
+        
+        try {
+            JobPostLike like = JobPostLike.builder()
+                    .jobPost(post)
+                    .user(user)
+                    .build();
+            jobPostLikeRepository.save(like);
+        } catch (org.springframework.dao.DataIntegrityViolationException e) {
+            throw new BadRequestException("User has already liked this post");
+        }
+    }
+
     @Override
     public JobPost createJobPost(JobPostRequest request) {
-
-
-
-        if(!userRepository.existsByUsername(request.getUsername())){
+        if (!userRepository.existsByUsername(request.getUsername())) {
             throw new IllegalArgumentException("Username does not exist: " + request.getUsername());
         }
 
-        if(request.getDescription().length()>5000 || request.getDescription().isBlank() || request.getDescription().length() < 50){
-            throw new IllegalArgumentException("Description must be between 1 and 5000 characters");
+        if (request.getDescription().length() > 5000 || request.getDescription().isBlank() || request.getDescription().length() < 50) {
+            throw new IllegalArgumentException("Description must be between 50 and 5000 characters");
         }
 
-        if(request.getImageUrls()!=null  && !request.getImageUrls().isEmpty()){
-
-//        if(request.getImageUrls().size()>5){
-//            throw new IllegalArgumentException("Cannot upload more than 5 images");
-//        }
-            request.getImageUrls().forEach(url->{
-
-
-                try{
-                    new URL(url); // this will chck wether hte url is coorect
-                }
-                catch(MalformedURLException e){
-                    throw new BadRequestException("invalid url: " + url);
+        if (request.getImageUrls() != null && !request.getImageUrls().isEmpty()) {
+            request.getImageUrls().forEach(url -> {
+                try {
+                    URI.create(url).toURL();
+                } catch (IllegalArgumentException | MalformedURLException e) {
+                    throw new BadRequestException("Invalid URL: " + url);
                 }
             });
         }
         JobPost jobPost = JobPost.builder()
-                .postId(UUID.randomUUID().toString())
                 .username(request.getUsername())
                 .description(request.getDescription())
                 .imageUrls(request.getImageUrls())
@@ -80,7 +120,7 @@ public class JobPostServiceImpl implements JobPostService{
     }
 
     @Override
-    public void deletePostByUser(Long userId, String postId) {
+    public void deletePostByUser(Long userId, Long postId) {
         var user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found with the id " + userId));
 
@@ -92,5 +132,37 @@ public class JobPostServiceImpl implements JobPostService{
         }
 
         jobPostRepository.delete(post);
+    }
+
+    @Override
+    public PagedPostResponse searchPosts(PostSearchRequest searchRequest) {
+        Pageable pageable = PageRequest.of(
+                searchRequest.getPageOrDefault(),
+                searchRequest.getSizeOrDefault()
+        );
+        
+        Page<JobPost> postPage = jobPostRepository.searchPosts(
+                searchRequest.getKeyword(),
+                searchRequest.getDateFrom(),
+                searchRequest.getDateTo(),
+                pageable
+        );
+        
+        Page<JobPostResponse> responsePage = postPage.map(JobPostResponse::fromEntity);
+        return PagedPostResponse.fromPage(responsePage);
+    }
+
+    @Override
+    public List<CommentResponse> getCommentsByJobPostId(Long jobPostId) {
+        JobPost jobPost = jobPostRepository.findById(jobPostId)
+                .orElseThrow(() -> new ResourceNotFoundException("Job post not found"));
+
+        return jobPost.getComments().stream()
+                .map(comment -> new CommentResponse(
+                        comment.getId(),
+                        comment.getContent(),
+                        comment.getUser().getUsername(),
+                        comment.getCreatedAt()
+                )).toList();
     }
 }
